--- a/TODO
+++ b/TODO
@@ -1,5 +1,3 @@
-- Bug: db_get_all_feed_counts() sometimes returns negative value for
-  latest_pub_date, latest_update.
 - Bug?: There are some old articles in the database. Why aren't they
   being cleaned out properly?
 	db_update_feed() only cleans out whichever feed it was called
@@ -18,7 +16,8 @@
 	Redirect to feed index.
 - Bug: in fancy skin, 'C' to collapse all, followed by 'E' to expand
   all; after which, articles without any text.
-	Can't reproduce on moist.
+	Find an article with summary, but no body. 'C' to collapse all,
+  then 'E' to expand all. Summary doesn't show up.
 - view.php: should get dates and times as Unix time_ts, not raw MySQL
   strings.
 	See
@@ -127,36 +126,13 @@
 - Upgrade/make install should generate new server key. This forces the
   user to re-login. And while we're at it, we can check to see whether
   anything needs to be upgraded.
-- Template class:
-  Fix htdocs/skins/wings/js/Template.js:
-	  The Template class is a bit of a hack. Turns out that
-  String.replace() can take a function as its second (replacement)
-  argument, which acts like /e in perl. This function takes a "match"
-  array: the first argument is $&, the second is $1, and so on.
-
-	var tmpl = "xxx@foo@yyy@bar@zzz";
-
-	var keys = {
-		"foo": "First substitution",
-		"bar": "Second substitution",
-	};
-
-	function substitute(m0, m1)
-	{
-		if (keys[m1] == undefined)
-			return "";
-		else
-			return keys[m1];
-	}
-
-	var str = tmpl.replace(/@(\w+)\@/g, substitute);
-	document.write(tmpl+"<br/>"+str+"<br/>");
 - Delete "mobile" skin?
 	First, save all the useful experiments.
 	- orientation, for iPad/iPhone
 	* get_json_data (could be useful)
 	- iPhone sizes, from index.css
 	- Gradients (index.css)
+	* Template
 - Add "$Rev$" or something to some file, so we can tell which revision
   we should be at. Compare this to the database, and see if we need to
   upgrade.
