--- a/TODO
+++ b/TODO
@@ -1,5 +1,3 @@
-- Fix things to work with Android.
-	Mozilla/5.0 (Linux; U; Android 2.2; en-us; DROID2 GLOBAL Build/S273) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1
 - Bug: wings doesn't remember position in page correctly.
 	Scroll down to one of the last feeds in the index. Pick a
   feed. Click on "Index" to go back. It returns to the top of the
@@ -27,7 +25,17 @@
   all; after which, articles without any text.
 	Find an article with summary, but no body. 'C' to collapse all,
   then 'E' to expand all. Summary doesn't show up.
-- Get rid of "Mark all as read" button?
+- Failblog (and others?) have tracking bug images that add
+  significantly to load time. Add plugin to remove them.
+- Plugin API: perhaps should have a standard return status indicating
+  what happened, e.g.:
+	0 - Didn't run (conditions not met)
+	1 - Ran, but no change
+	2 - Ran, made a change
+  Or something like that. The idea being that we can at some point
+  collect statistics and see which plugins run when. In particular, we
+  want to see when a plugin stops working because the feed changed the
+  format of its web bugs or whatever.
 - Move device recognition (iPhone/iPad/Android) to common.inc. Have it
   set $mobile.
 	While we're at it, have 'o' be a common option for requesting
