*** empty log message ***

--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 - Bug: Figure out why some feeds show up stale when they have recent articles.
 - Bug: HTMLPurify removes YouTube videos. Why?
+	They often involve iframes. See
+	http://stackoverflow.com/questions/4135755/how-do-i-allow-script-object-param-embed-and-iframe-tags-in-htmlpurifier
+	(From http://stackoverflow.com/questions/4739284/htmlpurifier-iframe-vimeo-and-youtube-video )
 - Bug: Jesus & Mo keeps redirecting back and forth. Perhaps add a
   flag to not update the database on redirect.
 	Or keep track of where we've been redirected and look for loops?
